Fixed some displaying scrollbar issues

--- a/src/components/Dishes/styles.module.css
+++ b/src/components/Dishes/styles.module.css
@@ -43,7 +43,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
-    overflow: scroll;
+    overflow: auto;
     width: 100%;
     height: 100%;
     border-radius: 20px;
