--- a/src/components/pages/Home/styles.module.css
+++ b/src/components/pages/Home/styles.module.css
@@ -5,8 +5,8 @@
 }
 
 .video {
-    min-width: 100vw;
-    min-height: 100vh;
+    width: 100vw;
+    height: 100vh;
     width: auto;
     height: auto;
     object-fit: cover;
